Pull request 2316: AGDNS-2239 fix setup guide list styles
Squashed commit of the following:

commit 52cc651e3b6a5fe7c46ad1fb41865f2dd1f84258
Merge: 324c4e102 c234e5dc3
Author: Eugene Burkov <E.Burkov@AdGuard.COM>
Date:   Thu Dec 5 15:28:39 2024 +0300

    Merge branch 'master' into AGDNS-2239

commit 324c4e1024e6d1c4fc72eeae2baeee6565512a6c
Author: Ildar Kamalov <ik@adguard.com>
Date:   Wed Dec 4 17:03:46 2024 +0300

    fix mobile styles

commit 739ccfa6f1c99562c81c2ba947b3c91fb82ea572
Author: Ildar Kamalov <ik@adguard.com>
Date:   Wed Dec 4 16:45:48 2024 +0300

    AGDNS-2239 fix guide list padding

--- a/client/src/components/SetupGuide/Guide.css
+++ b/client/src/components/SetupGuide/Guide.css
@@ -14,6 +14,17 @@
     font-size: 15px;
 }
 
+.guide__list {
+    margin-top: 16px;
+    padding-left: 0;
+}
+
+@media screen and (min-width: 768px) {
+    .guide__list {
+        padding-left: 24px;
+    }
+}
+
 .guide__address {
     display: block;
     margin-bottom: 7px;
